Minor CSS changes

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -60,7 +60,7 @@ $bgMeta: #f8f8f8;
 $bgMetaBorder: #d3c8bf;
 $bgMetaLight: lighten($bgMeta,20%);
 $bgMetaDark: darken($bgMeta,5%);
-$bgOrange: #ff7e00;
+$bgOrange: #ec7500;
 
 // Buttons
 $button: #8cad32;
