Updated bem classes in docs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,25 +3,25 @@
     <div class="pagewidth">
       <div class="grid">
 
-        <div class="grid-item large--one-quarter medium--one-half push--large--one-sixth">
+        <div class="grid__item large--one-quarter medium--one-half push--large--one-sixth">
           <h4 class="footer-title">Shopify Themes</h4>
           <div class="grid">
-            <div class="grid-item one-half">
+            <div class="grid__item one-half">
               <p><a href="https://themes.shopify.com/services/themes/guidelines?utm_source=Timber&utm_medium=os" title="Guidelines for selling themes" class="footer-link">Selling Themes</a></p>
             </div>
-            <div class="grid-item one-half">
+            <div class="grid__item one-half">
               <p><a href="https://ecommerce.shopify.com/c/ecommerce-design?utm_source=Timber&utm_medium=os" title="Meet the community" class="footer-link">Shopify Forums</a></p>
             </div>
-            <div class="grid-item one-half">
+            <div class="grid__item one-half">
               <p><a href="http://www.shopify.ca/partners?utm_source=Timber&utm_medium=os" title="Earn money from referrals" class="footer-link">Partner Program</a></p>
             </div>
-            <div class="grid-item one-half">
+            <div class="grid__item one-half">
               <p><a href="http://docs.shopify.com/themes/liquid-basics?utm_source=Timber&utm_medium=os" title="Learn the basics of Liquid templating" class="footer-link">Liquid Basics</a></p>
             </div>
           </div>
         </div>
 
-        <div class="grid-item large--seven-twelfths push--large--one-sixth">
+        <div class="grid__item large--seven-twelfths push--large--one-sixth">
           <h4 class="footer-title">Feedback</h4>
           <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">Github</a> or send us feedback at <a href="mailto:timber@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">timber@shopify.com</a>.<br>
           Follow the author <a href="https://twitter.com/cshold" title="Follow Us" class="footer-link">@cshold</a> on Twitter for updates.</p>
@@ -33,10 +33,10 @@
   <div class="footer-bar">
     <div class="pagewidth">
       <div class="grid">
-        <div class="grid-item large--nine-twelfths">
+        <div class="grid__item large--nine-twelfths">
           Timber {{ page.version }} © by Shopify Inc. Built and maintained by the <a href="mailto:timber@shopify.com" title="Corgis rule" class="footer-link">Themes Team</a>.
         </div>
-        <div class="grid-item large--three-twelfths">
+        <div class="grid__item large--three-twelfths">
           <a href="http://www.shopify.com?utm_source=Timber&utm_medium=os" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
         </div>
       </div>
