--- a/css/ie.css
+++ b/css/ie.css
@@ -509,9 +509,9 @@
 =============================================================
 ========================================================== */
 @font-face {
-  font-family: "icons";
-  src: url(" //cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.eot?38556 ");
-  src: url(" //cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.eot?38556 ?#iefix ") format("embedded-opentype"), url(" //cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.woff?38556 ") format("woff"), url(" //cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.ttf?38556 ") format("truetype"), url(" //cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.svg?38556 #timber-icons ") format("svg");
+  font-family: 'icons';
+  src: url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.eot?38614");
+  src: url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.eot?38614#iefix") format("embedded-opentype"), url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.woff?38614") format("woff"), url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.ttf?38614") format("truetype"), url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/icons.svg?38614#timber-icons") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -519,7 +519,7 @@
   *zoom: 1; }
 
 .clearfix:after {
-  content: "";
+  content: '';
   display: table;
   clear: both; }
 
@@ -549,7 +549,7 @@ input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webki
   *zoom: 1; }
 
 .grid:after, .grid--rev:after, .grid--full:after, .grid-uniform:after {
-  content: "";
+  content: '';
   display: table;
   clear: both; }
 
@@ -1368,7 +1368,7 @@ body {
   padding: 0 15px; }
 
 .wrapper:after {
-  content: "";
+  content: '';
   display: table;
   clear: both; }
 
@@ -1482,7 +1482,7 @@ blockquote cite {
   font-size: 0.75em; }
 
 blockquote cite:before {
-  content: "\2014 \0020"; }
+  content: '\2014 \0020'; }
 
 code, pre {
   background-color: #faf7f5;
@@ -1835,7 +1835,7 @@ select {
   -moz-appearance: none;
   appearance: none;
   background-position: right center;
-  background-image: url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/ico-select.svg?38556");
+  background-image: url("//cdn.shopify.com/s/files/1/0479/0585/t/17/assets/ico-select.svg?38614");
   background-repeat: no-repeat;
   background-position: right 10px center;
   background-color: transparent;
