--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -90,13 +90,17 @@
             {% endfor %}
           </select>
 
-          <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
+          {% if product.compare_at_price_max > product.price %}
+            <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
+          {% else %}
+            <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
+          {% endif %}
           <span id="ProductPrice" class="h2" itemprop="price">
             {{ current_variant.price | money }}
           </span>
 
           {% if product.compare_at_price_max > product.price %}
-            <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
+            <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
             <p id="ComparePrice">
               {{ 'products.product.compare_at' | t }} {{ current_variant.compare_at_price | money }}
             </p>
