Remove line break in paragraph

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
 
         <div class="grid__item large--seven-twelfths push--large--one-sixth">
           <h4 class="footer-title">Feedback</h4>
-          <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">Github</a>.<br> For general Shopify theme support, reach out to <a href="mailto:themesupport@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">themesupport@shopify.com</a>.</p>
+          <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">Github</a>. For general Shopify theme support, reach out to <a href="mailto:themesupport@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">themesupport@shopify.com</a>.</p>
         </div>
       </div>
     </div>
