Nitpicks: capitalization, minor wording tweaks, etc

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,17 +13,17 @@
               <p><a href="https://ecommerce.shopify.com/c/ecommerce-design?utm_source=Timber&utm_medium=os" title="Meet the community" class="footer-link">Shopify Forums</a></p>
             </div>
             <div class="grid__item one-half">
-              <p><a href="http://www.shopify.ca/partners?utm_source=Timber&utm_medium=os" title="Earn money from referrals" class="footer-link">Partner Program</a></p>
+              <p><a href="https://www.shopify.com/partners?utm_source=Timber&utm_medium=os" title="Earn money from referrals" class="footer-link">Partner Program</a></p>
             </div>
             <div class="grid__item one-half">
-              <p><a href="http://docs.shopify.com/themes/liquid-basics?utm_source=Timber&utm_medium=os" title="Learn the basics of Liquid templating" class="footer-link">Liquid Basics</a></p>
+              <p><a href="https://docs.shopify.com/themes/liquid-basics?utm_source=Timber&utm_medium=os" title="Learn the basics of Liquid templating" class="footer-link">Liquid Basics</a></p>
             </div>
           </div>
         </div>
 
         <div class="grid__item large--seven-twelfths push--large--one-sixth">
           <h4 class="footer-title">Feedback</h4>
-          <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">Github</a>. For general Shopify theme support, reach out to <a href="mailto:themesupport@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">themesupport@shopify.com</a>.</p>
+          <p>Submit issues on <a href="https://github.com/Shopify/Timber/issues" class="footer-link">GitHub</a>. For general Shopify theme support, reach out to <a href="mailto:themesupport@shopify.com?subject=Timber&nbsp;Feedback" class="footer-link">themesupport@shopify.com</a>.</p>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
           Timber {{ page.version }} © by Shopify Inc. Built and maintained by the <a href="mailto:timber@shopify.com" title="Corgis rule" class="footer-link">Themes Team</a>.
         </div>
         <div class="grid__item large--three-twelfths">
-          <a href="http://www.shopify.com?utm_source=Timber&utm_medium=os" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
+          <a href="https://www.shopify.com?utm_source=Timber&utm_medium=os" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
         </div>
       </div>
     </div>
