--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 {% endif %}
 
 {% if page.canonical %}
-  <link rel="canonical" href="http://www.shopify.com{{ page.canonical }}">
+  <link rel="canonical" href="https://www.shopify.com{{ page.canonical }}">
 {% endif %}
 
 {% if page.hide_from_search %}
