Remove timber email link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
     <div class="pagewidth">
       <div class="grid">
         <div class="grid__item large--nine-twelfths">
-          Timber {{ page.version }} © by Shopify Inc. Built and maintained by the <a href="mailto:timber@shopify.com" title="Corgis rule" class="footer-link">Themes Team</a>.
+          Timber {{ page.version }} © by Shopify Inc.
         </div>
         <div class="grid__item large--three-twelfths">
           <a href="https://www.shopify.com?utm_source=Timber&utm_medium=os" title="Shopify Home" class="shopify-logo large--right">Shopify</a>
